[package]
name = "tetris-auto"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
lazy_static = "1.4.0"
array-init = "2.0.0"

[target.'cfg(target_family="unix")'.dependencies]
termion = "1.5.6"

[dev-dependencies]
rand = "0.8.4"

[profile.release]
lto = true
codegen-units = 1